# pixel-art-rust

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  mise.toml  package.json  pnpm-lock.yaml
.claude/commands/: commit-changes.md  release.md
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/algorithms/: average-color.md  kmeans.md  median-cut.md  overview.md  quadtree.md
docs/api/: algorithms.md  cli.md  core.md
docs/guide/: examples.md  getting-started.md  installation.md  usage.md
features/: cli_20250114.yml  crawlable_links.yml  doc_20250114.yml  performance_20250114.yml  realtime_visualizer_20250114.yml
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs  visualizer.rs
src/core/: color.rs  grid.rs  mod.rs  pixel_art.rs  quadtree.rs  quantization.rs
tests/: args_tests.rs  color_tests.rs  grid_tests.rs  pixel_art_tests.rs  quadtree_tests.rs  quantization_tests.rs  visualizer_tests.rs
